--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <title>Mes plantes</title>
 </head>
 <body onload="prot()" onmousedown="return false" onselectstart="return false">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-   <!-- <script type="text/javascript">
+  <!--
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript">
       $(document).ready(function () {
           $("body").on("contextmenu",function(e){
               return false;
