--- a/link/notocactusindex.html
+++ b/link/notocactusindex.html
@@ -70,6 +70,7 @@
             <div class="index-category-tab-content" id="magnificus5" hidden="hidden">Je ne l'arrose pas du tout durant plusieurs mois.
             </div>
             <div class="index-category-tab-content" id="magnificus6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je garnis le haut de graviers de Jura surtout car j'aime bien le rendu qui fait un peu désertique. <br/>Je le garde dans un pot en terre-cuite pas trop grand.
+                <a class="species-repotting-info" href="repottingnotocactusmagnificus.html" alt="Rempotage Notocactus magnificus" title="Rempotage Notocactus magnificus">Voir comment je rempote mes Notocactus magnificus</a>
             </div>
         </section>
         <hr>    
