--- a/link/repottingnotocactusmagnificus.html
+++ b/link/repottingnotocactusmagnificus.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/stylesrepottingspecies.css">
     <script type="text/javascript" src="../assets/js/protection.js"></script>
-    <title>Rempotage Ferocactus stainesii</title>
+    <title>Rempotage Notocactus magnificus</title>
 </head>
-<body onload="prot()" id="repotting-ferocactus-stainesii">                      
+<body onload="prot()" id="repotting-notocactus-magnificus">                      
     <header>                                                                    <!-- TITLE - SUB-TITLE - BOUTONS NAVIGATION -->
         <section class="species-repotting-desc">
-            <div><h1 class="title-species-repotting-desc" id="top">Rempotage Ferocactus stainesii</h1>
-            <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter mon Ferocactus stainesii en créant un substrat très drainant à partir de plusieurs éléments et sans me piquer ni abîmer aucune épines.</h2></p></div>
+            <div><h1 class="title-species-repotting-desc" id="top">Rempotage Notocactus magnificus</h1>
+            <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter mon Notocactus magnificus en créant un substrat très drainant à partir de plusieurs élément.</h2></p></div>
         </section>  
                 <section class="nav-button">
-                    <button class="styled-btn-index"><a href="othercactusindex.html#stainesii">Fiche info de mon Ferocactus stainesii</a></button>
-                    <button class="styled-btn-gallery"><a href="othercactusgallery.html#stainesii">Galerie photos de mon Ferocactus stainesii</a></button>
+                    <button class="styled-btn-index"><a href="notocactusindex.html#magnificus">Fiche info de mon Notocactus magnificus</a></button>
+                    <button class="styled-btn-gallery"><a href="notocactusgallery.html#magnificus">Galerie photos de mon Notocactus magnificus</a></button>
                     <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
                 </section>
     </header>
@@ -70,97 +70,98 @@
                 Ici, des gravillons d'Akadama qui serviront en surface.
             </p>
         </div>
-    </section>
-    <section class="species-repotting-step">                                    <!-- AVANT REMPOTTAGE -->
+    </section>                                                                  <!-- AVANT REMPOTTAGE -->
+    <section class="species-repotting-step">
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(1).jpg" alt="avant rempotage" title="avant rempotage"/>
+            <img src="../assets/img/repotting/species/notocactusmagnificus(1).jpg" alt="avant rempotage" title="avant rempotage"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, le cactus après l'avoir acheté, il va passer au rempotage très prochainement afin d'avoir un meilleur substrat car on voit bien que son pot n'est pas correctement rempli. On voit bien comme ses épines sont courbées et dures.
+                Ici, les cactus après l'achat, ils vont passer au rempotage très prochainement afin d'avoir un meilleur substrat et un peu plus de place dans un pot en terre-cuite de plus grande taille.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- SORTI DE SA MOTTE -->
+    <section class="species-repotting-step">                                    <!-- COMPARAISON POTS -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(2).jpg" alt="sorti de sa motte" title="sorti de sa motte"/>
+            <img src="../assets/img/repotting/species/notocactusmagnificus(2).jpg" alt="comparaison pots" title="comparaison pots"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, on voit qu'une fois la motte cassée, il se trouvait dans un substrat totalement inadapté composé uniquement de terreau.
+                Ici, je regarde la différence de taille du prochain pot comparé à l'actuel.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- TENIR SANS SE PIQUER -->
+    <section class="species-repotting-step">                                    <!-- DÉPOTTAGE -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(3).jpg" alt="le tenir sans se piquer" title="le tenir sans se piquer"/>
+            <img src="../assets/img/repotting/species/notocactusmagnificus(3).jpg" alt="dépottage" title="dépottage"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, On voit qu'il est possible de le tenir en main sans utiliser de gants ou autres sans se piquer en mettant les doigts correctement entre ses épines du bas qui ne casseront pas car elles sont relativement dures.
+                Ici, je sors la motte du pot, les cactus sont contre la paume de ma main mais, vu qu'ils sont petits, aucun risque de me piquer et avec mes doigts, je tiens par la motte.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- TENIR SANS SE PIQUER -->
+    <section class="species-repotting-step">                                    <!-- VUE RACINES -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(4).jpg" alt="le tenir sans se piquer" title="le tenir sans se piquer"/>
+            <img src="../assets/img/repotting/species/notocactusmagnificus(4).jpg" alt="vue des racines" title="vue des racines"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Pareil ici, on voit qu'il est aisé de le tenir à mains nues sans se piquer.
+                Ici, après avoir gratté la majeure partie du substrat, on voit qu'ils ont déjà de belles racines en très bon état.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- CACTUS AVEC TUTEURS -->
+    <section class="species-repotting-step">                                    <!-- POT PARTIELLEMENT REMPLI -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(5).jpg" alt="cactus avec tuteurs" title="cactus avec tuteurs"/>
+            <img src="../assets/img/repotting/species/notocactusmagnificus(5).jpg" alt="pot partiellement rempli" title="pot partiellement rempli"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, le cactus est placé à une bonne hauteur sur le substrat qui remplit partiellement le pot. 4 tuteurs sont mit entre ses épines pour le maintenir au milieu afin de terminer le rempotage.
+                Ici, j'avais déjà partiellement rempli le nouveau pot de substrat afin d'éviter de devoir poser les cactus pour le faire et ainsi éviter d'abîmer les épines en les posant ailleurs.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- PLACEMENT CACTUS -->
+    <section class="species-repotting-step">                                    <!-- TUTEURAGE -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(6).jpg" alt="cactus placé au milieu" title="cactus placé au milieu"/>
+            <img src="../assets/img/repotting/species/notocactusmagnificus(6).jpg" alt="tuteurage" title="tuteurage"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Vue du dessus pour voir que le cactus se trouve bien au milieu du pot avant de continuer.
+                Ici, j'utilise des attaches de bâches afin de maintenir les cactus en place là ou je désire les mettre afin de poursuivre le rempottage tranquillement.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- PLACE POUR PASSER LES DOIGTS -->
+    <section class="species-repotting-step">                                    <!-- BARRES MAINTIEN -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(7).jpg" alt="place pour les doigts autour du cactus" title="place pour les doigts autour du cactus"/>
+            <img src="../assets/img/repotting/species/notocactusmagnificus(7).jpg" alt="reste les barres de maintien" title="reste les barres de maintien"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, on voit qu'il est alors possible de passer les doigts autour du cactus afin de tasser le substrat sans se piquer.
-            </p>
-        </div>
-    </section>
-    <section class="species-repotting-step">                                    <!-- SURFAÇAGE AKADAMA -->
-        <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(8).jpg" alt="surfaçage akadama" title="surfaçage akadama"/>
-        </div>
-        <div class="species-repotting-expl">
-            <p>
-                Ici, un surfaçage de gravillons d'Akadama qui vient terminer le rempotage.
+                Ici, le substrat manquant est mit et le surfaçage de graviers de Jura est fait, il ne me reste plus qu'à retirer les barres de maintien.
             </p>
         </div>
     </section>
     <section class="species-repotting-step">                                    <!-- REMPOTTAGE FINI -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(9).jpg" alt="rempotage fini" title="rempotage fini"/>
+            <img src="../assets/img/repotting/species/notocactusmagnificus(8).jpg" alt="rempotage fini" title="rempotage fini"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Les tuteurs sont retirés et le cactus peut aller vivre tranquillement dehors au soleil.
+                Ici, le rempottage est coplètement fini sans avoir abîmé les épines des cactus et sans en avoir eues dans les doigts.
             </p>
         </div>
     </section>
+    <section class="species-repotting-step">                                    <!-- VIE DEHORS -->
+        <div class="species-repotting-img">
+            <img src="../assets/img/repotting/species/notocactusmagnificus(9).jpg" alt="vie dehors" title="vie dehors"/>
+        </div>
+        <div class="species-repotting-expl">
+            <p>
+                Les cactus peuvent maintenant rejoindre les autres au soleil et grandir tranquillement.
+            </p>
+        </div>
+    </section>
+
 </main>
 <footer>                                                                        <!-- BOUTONS HAUT DE PAGE ET ACCUEIL -->                           
         <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
