--- a/link/repottingoreocereuscelsianus.html
+++ b/link/repottingoreocereuscelsianus.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/stylesrepottingspecies.css">
     <script type="text/javascript" src="../assets/js/protection.js"></script>
-    <title>Rempotage Ferocactus stainesii</title>
+    <title>Rempotage Oreocereus celsianus</title>
 </head>
-<body onload="prot()" id="repotting-ferocactus-stainesii">                      
+<body onload="prot()" id="repotting-oreocereus-celsianus">
     <header>                                                                    <!-- TITLE - SUB-TITLE - BOUTONS NAVIGATION -->
         <section class="species-repotting-desc">
-            <div><h1 class="title-species-repotting-desc" id="top">Rempotage Ferocactus stainesii</h1>
-            <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter mon Ferocactus stainesii en créant un substrat très drainant à partir de plusieurs éléments et sans me piquer ni abîmer aucune épines.</h2></p></div>
+            <div><h1 class="title-species-repotting-desc" id="top">Rempotage Oreocereus celsianus</h1>
+            <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter mon Oreocereus celsianus en créant un substrat très drainant à partir de plusieurs éléments et sans me piquer ni abîmer aucune épines.</h2></p></div>
         </section>  
                 <section class="nav-button">
-                    <button class="styled-btn-index"><a href="othercactusindex.html#stainesii">Fiche info de mon Ferocactus stainesii</a></button>
-                    <button class="styled-btn-gallery"><a href="othercactusgallery.html#stainesii">Galerie photos de mon Ferocactus stainesii</a></button>
+                    <button class="styled-btn-index"><a href="othercactusindex.html#celsianus">Fiche info de mon Oreocereus celsianus</a></button>
+                    <button class="styled-btn-gallery"><a href="othercactusgallery.html#celsianus">Galerie photos de mon Oreocereus celsianus</a></button>
                     <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
                 </section>
     </header>
@@ -73,96 +73,66 @@
     </section>
     <section class="species-repotting-step">                                    <!-- AVANT REMPOTTAGE -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(1).jpg" alt="avant rempotage" title="avant rempotage"/>
+            <img src="../assets/img/repotting/species/oreocereuscelsianus(1).jpg" alt="avant rempotage" title="avant rempotage"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, le cactus après l'avoir acheté, il va passer au rempotage très prochainement afin d'avoir un meilleur substrat car on voit bien que son pot n'est pas correctement rempli. On voit bien comme ses épines sont courbées et dures.
+                Ici, le cactus dans son ancien pot. Ayant été rempoté il y'a 4 ans, il va passer au rempotage très prochainement afin d'avoir un meilleur substrat car son actuel devient vieux.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- SORTI DE SA MOTTE -->
+    <section class="species-repotting-step">                                    <!-- SORTI DU POT -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(2).jpg" alt="sorti de sa motte" title="sorti de sa motte"/>
+            <img src="../assets/img/repotting/species/oreocereuscelsianus(2).jpg" alt="cactus sorti du pot" title="cactus sorti du pot"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, on voit qu'une fois la motte cassée, il se trouvait dans un substrat totalement inadapté composé uniquement de terreau.
+                Ici, je tiens le cactus en main par le bas, mes doigts sont placés entre ses épines robustes qui ne casseront donc pas. Le haut de la motte étant contre ma main, je le tiens facilement.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- TENIR SANS SE PIQUER -->
+    <section class="species-repotting-step">                                    <!-- DÉGAGEMENT RACINES -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(3).jpg" alt="le tenir sans se piquer" title="le tenir sans se piquer"/>
+            <img src="../assets/img/repotting/species/oreocereuscelsianus(3).jpg" alt="dégagement des racines" title="dégagement des racines"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, On voit qu'il est possible de le tenir en main sans utiliser de gants ou autres sans se piquer en mettant les doigts correctement entre ses épines du bas qui ne casseront pas car elles sont relativement dures.
+                Ici, l'ancien substrat est en grosse partie retiré, les racines sont dégagées et le bas du cactus (partie enterrée) est visiblement en très bon état.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- TENIR SANS SE PIQUER -->
+    <section class="species-repotting-step">                                    <!-- PLACEMENT NOUVEAU POT -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(4).jpg" alt="le tenir sans se piquer" title="le tenir sans se piquer"/>
+            <img src="../assets/img/repotting/species/oreocereuscelsianus(4).jpg" alt="placement dans le nouveau pot" title="placement dans le nouveau pot"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Pareil ici, on voit qu'il est aisé de le tenir à mains nues sans se piquer.
+                Ici, le pot est partiellement rempli et je place le cactus dessus au milieu et je place un premier tuteur pour éviter qu'il ne tombe sur le côté.
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">                                    <!-- CACTUS AVEC TUTEURS -->
+    <section class="species-repotting-step">                                    <!-- TUTEURS MAINTIEN -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(5).jpg" alt="cactus avec tuteurs" title="cactus avec tuteurs"/>
+            <img src="../assets/img/repotting/species/oreocereuscelsianus(5).jpg" alt="tuteurs de maintien" title="tuteurs de maintien"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Ici, le cactus est placé à une bonne hauteur sur le substrat qui remplit partiellement le pot. 4 tuteurs sont mit entre ses épines pour le maintenir au milieu afin de terminer le rempotage.
-            </p>
-        </div>
-    </section>
-    <section class="species-repotting-step">                                    <!-- PLACEMENT CACTUS -->
-        <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(6).jpg" alt="cactus placé au milieu" title="cactus placé au milieu"/>
-        </div>
-        <div class="species-repotting-expl">
-            <p>
-                Vue du dessus pour voir que le cactus se trouve bien au milieu du pot avant de continuer.
-            </p>
-        </div>
-    </section>
-    <section class="species-repotting-step">                                    <!-- PLACE POUR PASSER LES DOIGTS -->
-        <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(7).jpg" alt="place pour les doigts autour du cactus" title="place pour les doigts autour du cactus"/>
-        </div>
-        <div class="species-repotting-expl">
-            <p>
-                Ici, on voit qu'il est alors possible de passer les doigts autour du cactus afin de tasser le substrat sans se piquer.
-            </p>
-        </div>
-    </section>
-    <section class="species-repotting-step">                                    <!-- SURFAÇAGE AKADAMA -->
-        <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(8).jpg" alt="surfaçage akadama" title="surfaçage akadama"/>
-        </div>
-        <div class="species-repotting-expl">
-            <p>
-                Ici, un surfaçage de gravillons d'Akadama qui vient terminer le rempotage.
+                Ici, j'ai du placer un deuxième tuteur pour bien maintenir le cactus en place.
             </p>
         </div>
     </section>
     <section class="species-repotting-step">                                    <!-- REMPOTTAGE FINI -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/ferocactusstainesii(9).jpg" alt="rempotage fini" title="rempotage fini"/>
+            <img src="../assets/img/repotting/species/oreocereuscelsianus(6).jpg" alt="rempotage fini" title="rempotage fini"/>
         </div>
         <div class="species-repotting-expl">
             <p>
-                Les tuteurs sont retirés et le cactus peut aller vivre tranquillement dehors au soleil.
+                Rempotage terminé et tuteurs retirés, le cactus peut aller profiter du beau temps en extérieur.
             </p>
         </div>
     </section>
 </main>
-<footer>                                                                        <!-- BOUTONS HAUT DE PAGE ET ACCUEIL -->                           
+<footer>                                                                        <!-- BOUTONS HAUT DE PAGE ET ACCUEIL -->
         <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
         <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
 </footer>
