--- a/link/repottingstetsoniacoryne.html
+++ b/link/repottingstetsoniacoryne.html
@@ -9,7 +9,7 @@
     <title>Rempotage Stetsonia coryne</title>
 </head>
 <body onload="prot()" id="repotting-stetsonia-coryne">
-    <header>
+    <header>                                                                    <!-- TITLE - SUB-TITLE - BOUTONS NAVIGATION -->
         <section class="species-repotting-desc">
             <div><h1 class="title-species-repotting-desc" id="top">Rempotage Stetsonia coryne</h1>
             <p><h2 class="sub-title-species-repotting-desc">Ici, je vais montrer comment je pratique pour rempoter mes Stetsonia coryne en créant un substrat très drainant à partir de plusieurs éléments et sans me piquer ni abîmer aucune épines.</h2></p></div>
@@ -20,61 +20,60 @@
                     <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
                 </section>
     </header>
-<main>
-
-    <section class="species-repotting-step">
+    <main>                                                                          <!-- TOUTES LES ÉTAPES -->
+        <section class="species-repotting-step">                                    <!-- TERREAU -->
+            <div class="species-repotting-img">
+                <img src="../assets/img/repotting/substrat/terreau.jpg" alt="Terreau universel" title="Terreau universel"/>
+            </div>
+            <div class="species-repotting-expl">
+                <p>
+                    Ici, c'est un simple terreau universel que j'ai laissé sécher un peu et dont j'ai retiré les gros morceaux.
+                </p>
+            </div>
+        </section>
+        <section class="species-repotting-step">                                    <!-- GRAVILLONS QUARTZ -->
+            <div class="species-repotting-img">
+                <img src="../assets/img/repotting/substrat/quartz.jpg" alt="gravillons de quartz" title="gravillons de quartz"/>
+            </div>
+            <div class="species-repotting-expl">
+                <p>
+                    Ici, ce sont tout simplement des gravillons de quartz utilisés en aquarium de granulométrie 1 à 3 mm.
+                </p>
+            </div>
+        </section>
+        <section class="species-repotting-step">                                    <!-- SABLE RIVIÈRE -->
+            <div class="species-repotting-img">
+                <img src="../assets/img/repotting/substrat/sand.jpg" alt="sable de rivière" title="sable de rivière"/>
+            </div>
+            <div class="species-repotting-expl">
+                <p>
+                    Ici, c'est du sable de rivière comme celui utilisé en aquarium de granulométrie 0,4 mm.
+                </p>
+            </div>
+        </section>
+        <section class="species-repotting-step">                                    <!-- MÉLANGE -->
+            <div class="species-repotting-img">
+                <img src="../assets/img/repotting/substrat/melange.jpg" alt="mélange fait" title="mélange fait"/>
+            </div>
+            <div class="species-repotting-expl">
+                <p>
+                    Ici, le mélange des 3 précédents éléments fait. On voit que le mélange est sec afin que les éventuelles racines blessées lors du rempotage puissent cicatriser tranquillement.
+                </p>
+            </div>
+        </section>
+        <section class="species-repotting-step">                                    <!-- AKADAMA -->
+            <div class="species-repotting-img">
+                <img src="../assets/img/repotting/substrat/akadama.jpg" alt="gravillons akadama" title="gravilons akadama"/>
+            </div>
+            <div class="species-repotting-expl">
+                <p>
+                    Ici, des gravillons d'Akadama qui serviront en surface.
+                </p>
+            </div>
+        </section>
+    <section class="species-repotting-step">                                        <!-- AVANT REMPOTTAGE -->
         <div class="species-repotting-img">
-            <img src="../assets/img/repotting/substrat/terreau.jpg" alt="Terreau universel" title="Terreau universel"/>
-        </div>
-        <div class="species-repotting-expl">
-            <p>
-                Ici, c'est un simple terreau universel que j'ai laissé sécher un peu et dont j'ai retiré les gros morceaux.
-            </p>
-        </div>
-    </section>
-    <section class="species-repotting-step">
-        <div class="species-repotting-img">
-            <img src="../assets/img/repotting/substrat/quartz.jpg" alt="gravillons de quartz" title="gravillons de quartz"/>
-        </div>
-        <div class="species-repotting-expl">
-            <p>
-                Ici, ce sont tout simplement des gravillons de quartz utilisés en aquarium de granulométrie 1 à 3 mm.
-            </p>
-        </div>
-    </section>
-    <section class="species-repotting-step">
-        <div class="species-repotting-img">
-            <img src="../assets/img/repotting/substrat/sand.jpg" alt="sable de rivière" title="sable de rivière"/>
-        </div>
-        <div class="species-repotting-expl">
-            <p>
-                Ici, c'est du sable de rivière comme celui utilisé en aquarium de granulométrie 0,4 mm.
-            </p>
-        </div>
-    </section>
-    <section class="species-repotting-step">
-        <div class="species-repotting-img">
-            <img src="../assets/img/repotting/substrat/melange.jpg" alt="mélange fait" title="mélange fait"/>
-        </div>
-        <div class="species-repotting-expl">
-            <p>
-                Ici, le mélange des 3 précédents éléments fait.
-            </p>
-        </div>
-    </section>
-    <section class="species-repotting-step">
-        <div class="species-repotting-img">
-            <img src="../assets/img/repotting/substrat/akadama.jpg" alt="gravillons akadama" title="gravilons akadama"/>
-        </div>
-        <div class="species-repotting-expl">
-            <p>
-                Ici, des gravillons d'Akadama qui serviront en surface.
-            </p>
-        </div>
-    </section>
-    <section class="species-repotting-step">
-        <div class="species-repotting-img">
-            <img src="../assets/img/repotting/species/stetsoniacoryne(1).jpg" alt="Stetsonia coryne" title="Stetsonia coryne"/>
+            <img src="../assets/img/repotting/species/stetsoniacoryne(1).jpg" alt="avant rempottage" title="avant rempottage"/>
         </div>
         <div class="species-repotting-expl">
             <p>
@@ -82,7 +81,7 @@
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">
+    <section class="species-repotting-step">                                        <!-- CASSER POT -->
         <div class="species-repotting-img">
             <img src="../assets/img/repotting/species/stetsoniacoryne(2).jpg" alt="casser pot plastique" title="casser pot plastique"/>
         </div>
@@ -92,7 +91,7 @@
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">
+    <section class="species-repotting-step">                                        <!-- DÉMOTTAGE FAIT -->
         <div class="species-repotting-img">
             <img src="../assets/img/repotting/species/stetsoniacoryne(3).jpg" alt="cactus racines quasi nues" title="cactus racines quasi nues"/>
         </div>
@@ -102,7 +101,7 @@
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">
+    <section class="species-repotting-step">                                        <!-- CACTUS AVEC TUTEURS -->
         <div class="species-repotting-img">
             <img src="../assets/img/repotting/species/stetsoniacoryne(4).jpg" alt="cactus avec tuteurs" title="cactus avec tuteurs"/>
         </div>
@@ -112,7 +111,7 @@
             </p>
         </div>
     </section>
-    <section class="species-repotting-step">
+    <section class="species-repotting-step">                                        <!-- REMPOTTAGE FINI -->
         <div class="species-repotting-img">
             <img src="../assets/img/repotting/species/stetsoniacoryne(5).jpg" alt="rempotage fini" title="rempotage fini"/>
         </div>
@@ -122,9 +121,8 @@
             </p>
         </div>
     </section>
-    
 </main>
-<footer>                                       
+<footer>                                                                        <!-- BOUTONS HAUT DE PAGE ET ACCUEIL -->                                 
         <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
         <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
 </footer>
