--- a/modal.html
+++ b/modal.html
@@ -126,8 +126,10 @@
                                     </div>
                                     <div class="modal-desc-flex">
                                         <div>
-                                            _Ajout d'une page expliquant comment je rempote mes Stetsonia coryne.
                                             _Ajout d'une page expliquant comment je rempote mon Ferocactus stainesii.
+                                            _Ajout d'une page expliquant comment je rempote mon Notocactus magnificus.
+                                            _Ajout d'une page expliquant comment je rempote mes Oreocereus celsianus.
+                                            _Ajout d'une page expliquant comment je rempote mes Stetsonia coryne.
                                         </div>
                                 </div>
                                 </li>                                                    
